--- a/Vienna/Interfaces/Base.lproj/MainWindowController.xib
+++ b/Vienna/Interfaces/Base.lproj/MainWindowController.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21225"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -98,7 +99,7 @@
                                                                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="a3L-k0-Hh3"/>
                                                                         </imageView>
                                                                         <textField identifier="TextField" horizontalHuggingPriority="249" verticalHuggingPriority="751" horizontalCompressionResistancePriority="250" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JQW-he-OfP">
-                                                                            <rect key="frame" x="19" y="1" width="182" height="16"/>
+                                                                            <rect key="frame" x="20" y="1" width="180" height="16"/>
                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Folder Name" id="RHN-51-qgk">
                                                                                 <font key="font" metaFont="system"/>
                                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -106,17 +107,19 @@
                                                                             </textFieldCell>
                                                                         </textField>
                                                                         <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="4" horizontalStackHuggingPriority="750" verticalStackHuggingPriority="750" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ujq-2L-ZIq">
-                                                                            <rect key="frame" x="207" y="1" width="58" height="16"/>
+                                                                            <rect key="frame" x="206" y="1" width="59" height="16"/>
                                                                             <subviews>
                                                                                 <progressIndicator identifier="FolderProgressIndicator" wantsLayer="YES" horizontalHuggingPriority="252" verticalHuggingPriority="251" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="Zii-IU-mH4">
                                                                                     <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
                                                                                 </progressIndicator>
                                                                                 <imageView identifier="FolderAuxImageView" toolTip="An error occurred when this feed was last refreshed" wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zar-1U-8CD">
-                                                                                    <rect key="frame" x="20" y="0.0" width="16" height="16"/>
-                                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="folderError" id="Efq-pL-jQo"/>
+                                                                                    <rect key="frame" x="20" y="-2.5" width="17.5" height="22"/>
+                                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Efq-pL-jQo">
+                                                                                        <imageReference key="image" image="exclamationmark.triangle.fill" catalog="system" symbolScale="default" renderingMode="original"/>
+                                                                                    </imageCell>
                                                                                 </imageView>
                                                                                 <button identifier="CountButton" horizontalHuggingPriority="252" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J4i-Hs-cUg">
-                                                                                    <rect key="frame" x="40" y="0.0" width="18" height="16"/>
+                                                                                    <rect key="frame" x="41" y="0.0" width="18" height="16"/>
                                                                                     <buttonCell key="cell" type="inline" title="0" bezelStyle="inline" alignment="center" refusesFirstResponder="YES" borderStyle="border" inset="2" id="RSJ-ph-xG6">
                                                                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                                         <font key="font" metaFont="smallSystemBold"/>
@@ -140,9 +143,9 @@
                                                                         <constraint firstItem="ujq-2L-ZIq" firstAttribute="centerY" secondItem="SfX-xE-qxf" secondAttribute="centerY" id="ELg-NU-EbG"/>
                                                                         <constraint firstItem="J4i-Hs-cUg" firstAttribute="firstBaseline" secondItem="JQW-he-OfP" secondAttribute="firstBaseline" id="Nps-3X-1De"/>
                                                                         <constraint firstAttribute="trailing" secondItem="ujq-2L-ZIq" secondAttribute="trailing" id="NsO-Aa-M0K"/>
-                                                                        <constraint firstItem="JQW-he-OfP" firstAttribute="leading" secondItem="SfX-xE-qxf" secondAttribute="leading" constant="21" id="Tuv-eU-9NA"/>
+                                                                        <constraint firstItem="JQW-he-OfP" firstAttribute="leading" secondItem="SfX-xE-qxf" secondAttribute="leading" constant="22" id="Tuv-eU-9NA"/>
                                                                         <constraint firstItem="ujq-2L-ZIq" firstAttribute="leading" secondItem="JQW-he-OfP" secondAttribute="trailing" constant="8" symbolic="YES" id="Xn8-3S-1qC"/>
-                                                                        <constraint firstItem="JQW-he-OfP" firstAttribute="leading" secondItem="N4h-ph-608" secondAttribute="centerX" constant="12" id="cEs-gO-a0v"/>
+                                                                        <constraint firstItem="JQW-he-OfP" firstAttribute="leading" secondItem="N4h-ph-608" secondAttribute="centerX" priority="900" constant="13" id="cEs-gO-a0v"/>
                                                                         <constraint firstItem="N4h-ph-608" firstAttribute="centerY" secondItem="SfX-xE-qxf" secondAttribute="centerY" id="h1c-LF-5QV"/>
                                                                     </constraints>
                                                                     <connections>
@@ -1164,6 +1167,6 @@
         <image name="PreviousItemTemplate" width="18" height="12"/>
         <image name="StyleTemplate" width="15" height="15"/>
         <image name="SyncTemplate" width="30" height="30"/>
-        <image name="folderError" width="16" height="16"/>
+        <image name="exclamationmark.triangle.fill" catalog="system" width="17" height="15"/>
     </resources>
 </document>
